bug fixed: printing lines with leading white space now works

--- a/source/ide.css
+++ b/source/ide.css
@@ -115,7 +115,7 @@ p {
 .ide-message
 {
 	width: 100%;
-	white-space: nowrap;
+	white-space: pre;
 }
 
 .ide-message:hover
